--- a/client/src/components/pets/petCard/PetCard.module.css
+++ b/client/src/components/pets/petCard/PetCard.module.css
@@ -8,7 +8,7 @@
     background-color: #E6AA68;
     border-radius: 10%;
     transition: box-shadow 0.6s ;
-    box-shadow: inset 0px 0px 24px -10px rgba(0,0,0,0.75), 0px 0px 18px -1px rgba(0,0,0,0);
+    box-shadow: inset 0px 0px 24px -10px rgba(153, 78, 38, 0.75), 0px 0px 18px -1px rgba(0,0,0,0);
 }
 
 .PetCard:hover {
